--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -59,9 +59,9 @@ h2.section { margin: 0px 0px 20px 0px; font-size: 14px; font-weight: bold }
     select[multiple] { height: auto; }
     textarea { height: auto }
 }
-.form-actions { 
+.form-actions {
     padding-top: 20px; 
-    input[type=submit], button { margin-right: 10px; }
+    input[type=submit], button { margin-right: 10px; margin-bottom: 10px; }
 }
 .form-editor { 
     margin-bottom: 20px;
