--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -6888,6 +6888,7 @@ textarea.model-search-box input {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  margin-left: 0px;
 }
 .slider .slides ul li {
   position: absolute;
@@ -6895,6 +6896,7 @@ textarea.model-search-box input {
   top: 0px;
   width: 100%;
   height: 100%;
+  padding: 0px;
 }
 .slider .to-left {
   position: absolute;
@@ -7016,6 +7018,11 @@ textarea.model-search-box input {
   width: 100%;
   border: none;
 }
+@media (max-width: 480px) {
+  .page-videos .video {
+    width: 100%;
+  }
+}
 .widget-videos img.cover {
   max-width: 100%;
 }
@@ -7038,6 +7045,11 @@ textarea.model-search-box input {
 .page-streams .stream-player iframe {
   width: 100%;
   border: none;
+}
+@media (max-width: 480px) {
+  .page-streams .stream {
+    width: 100%;
+  }
 }
 .widget-streams a {
   display: block;
@@ -7072,6 +7084,11 @@ textarea.model-search-box input {
 .page-galleries .galleries .image:hover {
   transform: scale(1.1, 1.1);
   transition: all 0.3s ease;
+}
+@media (max-width: 480px) {
+  .page-galleries .galleries .item {
+    width: 33%;
+  }
 }
 .page-galleries .images .image {
   text-align: center;
@@ -7169,6 +7186,10 @@ textarea.model-search-box input {
   text-align: center;
   float: left;
 }
+.page-matches .overview img {
+  max-width: 120px;
+  max-height: 120px;
+}
 .page-matches .overview .mid {
   padding-top: 40px;
   font-size: 30px;
@@ -7202,6 +7223,12 @@ textarea.model-search-box input {
 }
 .page-matches div.scores .item span {
   display: block;
+}
+@media (max-width: 480px) {
+  .page-matches .overview img {
+    max-width: 80px;
+    max-height: 80px;
+  }
 }
 .widget-matches-latest li {
   position: relative;
@@ -7279,7 +7306,7 @@ textarea.model-search-box input {
   color: white;
 }
 .page-forums-index .sub-forum .info {
-  width: 60%;
+  width: 55%;
   float: left;
 }
 .page-forums-index .sub-forum .info .desc {
@@ -7287,7 +7314,7 @@ textarea.model-search-box input {
   font-size: 10px;
 }
 .page-forums-index .sub-forum .counter {
-  width: 15%;
+  width: 20%;
   float: left;
 }
 .page-forums-index .sub-forum .latest {
@@ -7297,6 +7324,11 @@ textarea.model-search-box input {
 .page-forums-index .sub-forum .latest .meta {
   display: block;
   font-size: 10px;
+}
+@media (max-width: 500px) {
+  .page-forums-index .sub-forum .counter {
+    display: none;
+  }
 }
 .page-forums-show-forum .buttons,
 .page-forums-show-new-threads .buttons {
@@ -7447,6 +7479,21 @@ textarea.model-search-box input {
   display: block;
   font-size: 10px;
 }
+@media (max-width: 500px) {
+  .page-forums-show-forum .threads .counter,
+  .page-forums-show-new-threads .threads .counter,
+  .page-forums-show-forum .sub-forums .counter,
+  .page-forums-show-new-threads .sub-forums .counter {
+    display: none;
+  }
+  .page-forums-show-forum .threads .latest a,
+  .page-forums-show-new-threads .threads .latest a,
+  .page-forums-show-forum .sub-forums .latest a,
+  .page-forums-show-new-threads .sub-forums .latest a {
+    display: block;
+    font-size: 10px;
+  }
+}
 .page-threads .buttons,
 .page-posts .buttons {
   margin-bottom: 20px;
@@ -7556,6 +7603,35 @@ textarea.model-search-box input {
 .page-posts .post:hover .top-bar .buttons {
   display: block !important;
 }
+@media (max-width: 500px) {
+  .page-threads .buttons a,
+  .page-posts .buttons a {
+    margin-bottom: 10px;
+  }
+  .page-threads .post .meta,
+  .page-posts .post .meta {
+    position: relative;
+    width: auto;
+    min-height: 0;
+    float: none;
+  }
+  .page-threads .post .meta .avatar,
+  .page-posts .post .meta .avatar {
+    float: right;
+    max-width: 16px;
+    max-height: 16px;
+  }
+  .page-threads .post .content,
+  .page-posts .post .content {
+    margin-left: 0px;
+    min-height: 0;
+  }
+  .page-threads .post .content .buttons,
+  .page-posts .post .content .buttons {
+    position: relative !important;
+    right: auto !important;
+  }
+}
 @keyframes posthighlight {
   0% {
     border-color: #00afff;
@@ -7615,7 +7691,7 @@ textarea.model-search-box input {
   color: white;
 }
 .page-threads.page-forums-threads-new .sub-forum .info {
-  width: 60%;
+  width: 55%;
   float: left;
 }
 .page-threads.page-forums-threads-new .sub-forum .info .desc {
@@ -7623,7 +7699,7 @@ textarea.model-search-box input {
   font-size: 10px;
 }
 .page-threads.page-forums-threads-new .sub-forum .counter {
-  width: 15%;
+  width: 20%;
   float: left;
 }
 .page-threads.page-forums-threads-new .sub-forum .latest {
