--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -160,6 +160,7 @@ a:hover { color: @primaryColor; }
 .widget-partners {
     a { display: block; text-align: center; }
     img {
+        max-width: 100%;
         &.filter { filter: grayscale(1); -webkit-filter: grayscale(1); transition: all 0.8s ease; }
         &.filter:hover { filter: grayscale(0); -webkit-filter: grayscale(0); transition: all 0.2s ease; }
     }
