Bootstrap modal got new styling

--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -82,6 +82,14 @@ h2.section { margin: 0px 0px 20px 0px; font-size: 14px; font-weight: bold }
     img:hover { max-height: 200px; }
 }
 
+/* Modal */
+.modal .modal-header {
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    background-color: @blue;
+    color: white;
+}
+
 /* Toolbar */
 .toolbar {
     &.top { 
