--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -73,6 +73,14 @@ a:hover { color: @primaryColor; }
     img { max-width: 100%; }
 }
 
+/* Modal */
+.modal .modal-header {
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    background-color: @primaryColor;
+    color: white;
+}
+
 /* Content filter UI */
 .content-filter-ui {
     select {
