--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -6582,6 +6582,14 @@ button.close {
 .form-group label[for] {
   cursor: pointer;
 }
+.modal .modal-content {
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.25), 0 25px 55px 0 rgba(0, 0, 0, 0.2);
+}
+.modal .modal-body {
+  padding-top: 30px;
+}
 .numeric-input {
   text-align: right;
 }
@@ -6797,6 +6805,13 @@ textarea.form-group textarea {
 }
 .image-upload-prev img:hover {
   max-height: 200px;
+}
+/* Modal */
+.modal .modal-header {
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: #00afff;
+  color: white;
 }
 /* Toolbar */
 .toolbar.top {
