--- a/resources/assets/less/shared.less
+++ b/resources/assets/less/shared.less
@@ -32,6 +32,17 @@
     }
 }
 
+.modal {
+    .modal-content {
+        border: none;
+        border-radius: 3px;
+        box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.25), 0 25px 55px 0 rgba(0, 0, 0, 0.20);
+    }
+    .modal-body {
+        padding-top: 30px;
+    }
+}
+
 .numeric-input { text-align: right }
 
 .spoiler-wrapper { 
