--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -358,7 +358,7 @@ a:hover { color: @primaryColor; }
         .meta {
             position: absolute; left: 0px; top: 0px; width: @metaWidth + 20px; height: 100%; min-height: @minHeight; box-sizing: border-box; padding: 10px; background-color: #EEE; float: left;
             .creator-name { .text-overflow(); display: block; }
-            .avatar { display: block; }
+            .avatar { display: block; max-width: 100px; max-height: 100px; }
             .counter { display: block; }
         }
         .content { 
