--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -11,7 +11,7 @@
  */
 
 @textblack: rgb(85, 85, 85);
-@bgblack: #1a1f23;
+@bgblack: #222e38;
 @blue: #00afff;
 @hoverblue: darken(@blue, 5%);
 @white: #fff;
