--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,300,700);
 /*
  * Imports
  */
@@ -6657,10 +6658,51 @@ a:active {
 }
 a:hover {
   color: #00afff;
+  text-decoration: none;
 }
 /*
  * Classes
  */
+.page-title {
+  margin: 0px 0px 20px 0px;
+  padding: 10px 20px;
+  border-bottom: 4px solid #004666;
+  background-color: #00afff;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.page {
+  margin-bottom: 20px;
+  padding: 20px;
+  background-color: #111214;
+}
+.alert {
+  border-radius: 0px;
+}
+.alert-info {
+  background-color: #00afff;
+  color: white;
+  border: none;
+  border-left: 4px solid #006999;
+}
+.alert-success {
+  background-color: #00ff4e;
+  color: white;
+  border: none;
+  border-left: 4px solid #00992f;
+}
+.alert-error {
+  background-color: #ff4000;
+  color: white;
+  border: none;
+  border-left: 4px solid #992600;
+}
+.well {
+  background-color: black;
+  border-color: #202427;
+}
 /* Messages */
 .ui-message {
   padding: 15px;
@@ -6669,6 +6711,7 @@ a:hover {
   border-radius: 4px;
   background-color: #eee;
   border: 1px solid #00afff;
+  border-radius: 0px;
 }
 .ui-message h4 {
   margin-top: 0;
@@ -6688,6 +6731,21 @@ a:hover {
   font-weight: bold;
 }
 /* Form */
+.btn,
+.input-group-addon {
+  border-radius: 0px;
+  border-color: #00afff;
+  background-color: transparent;
+  color: #00afff;
+}
+.btn:hover {
+  border-color: #00afff;
+  background-color: #00afff;
+  color: white;
+}
+.input-group-addon {
+  border-left: 1px solid #00afff !important;
+}
 .form-group label {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -6715,6 +6773,11 @@ a:hover {
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  background-color: #111214;
+  border: none;
+  border-bottom: 2px solid #00afff;
+  border-radius: 1px;
+  color: white;
 }
 .form-group input:focus,
 .form-group select:focus,
@@ -6757,6 +6820,11 @@ textarea.form-group input,
 textarea.form-group select,
 textarea.form-group textarea {
   height: auto;
+}
+.form-group input:focus,
+.form-group select:focus,
+.form-group textarea:focus {
+  box-shadow: none !important;
 }
 .form-group textarea {
   height: auto;
@@ -6910,7 +6978,7 @@ textarea.model-search-box input {
 .slider {
   position: relative;
   width: 100%;
-  height: 245px;
+  height: 360px;
   /* Height of a single slide */
 }
 .slider .slides {
@@ -6937,60 +7005,93 @@ textarea.model-search-box input {
 }
 .slider .slides a {
   display: block;
-  text-align: center;
+  width: 100%;
+  height: 361px;
+  background-position: center;
+  background-size: cover;
+  color: transparent;
+  font-size: 0px;
+}
+.slider .slides img {
+  max-width: 100%;
 }
 .slider .to-left {
   position: absolute;
-  left: 0px;
-  top: 40%;
-  width: 35px;
-  height: 35px;
+  left: 20px;
+  top: 35%;
+  padding: 20px;
   line-height: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
   color: white;
+  opacity: 0.2;
   text-align: center;
 }
 .slider .to-right {
   position: absolute;
-  right: 0px;
-  top: 40%;
-  width: 35px;
-  height: 35px;
+  right: 20px;
+  top: 35%;
+  padding: 20px;
   line-height: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
   color: white;
+  opacity: 0.2;
   text-align: center;
 }
 .slider .to-left:hover,
 .slider .to-right:hover {
-  background-color: #000000;
+  opacity: 1;
 }
 .slider .buttons {
   position: absolute;
-  right: 20px;
-  bottom: 20px;
+  right: 40px;
+  bottom: 40px;
+}
+.slider .buttons ul {
+  margin-bottom: 0px;
 }
 .slider .buttons li {
   width: 30px;
   height: 30px;
   line-height: 30px;
   margin-left: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
+  background-color: black;
+  color: rgba(255, 255, 255, 0.5);
+  opacity: 0.5;
   cursor: pointer;
   text-align: center;
 }
 .slider .buttons li.active {
-  background-color: #000000;
+  outline: 1px solid #00afff;
+  color: white;
+}
+.slider .buttons li:hover {
+  opacity: 1;
+  color: white;
+}
+.slider .container {
+  position: relative;
+  height: 100%;
 }
 .slider .slide-title {
   position: absolute;
-  max-width: calc(100% - 40px) /* 40 = left * 2 */;
+  max-width: calc(100% - 80px) /* 80 = left * 2 */;
   margin: 0px;
-  left: 20px;
-  bottom: 20px;
+  left: 40px;
+  bottom: 40px;
   color: white;
   text-shadow: 0px 0px 3px black;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.slider .slide-title a {
+  display: inline-block;
+  padding: 20px;
+  color: white;
+}
+@media (max-width: 990px) {
+  .slider .buttons {
+    display: none;
+  }
+  .slider h2 {
+    font-size: 20px;
+  }
 }
 .scroller {
   overflow-x: hidden;
@@ -7041,6 +7142,21 @@ textarea.model-search-box input {
   filter: grayscale(0);
   -webkit-filter: grayscale(0);
   transition: all 0.2s ease;
+}
+.page-news .news {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #202427;
+}
+.page-news .news h2 {
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 0px;
+}
+.page-news .news header span {
+  display: block;
+  margin-bottom: 20px;
+  color: #00afff;
 }
 .page-news .news .image img {
   max-width: 100%;
@@ -7097,20 +7213,34 @@ textarea.model-search-box input {
     width: 100%;
   }
 }
+.widget-streams li {
+  height: 80px;
+}
 .widget-streams a {
   display: block;
   position: relative;
 }
-.widget-streams .title {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.widget-streams a:hover div {
+  -webkit-filter: brightness(1.5);
+  filter: brightness(1.5);
+  transition: all 0.3s ease;
+}
+.widget-streams .image {
   display: inline-block;
-  width: 80%;
+  height: 60px;
+  width: 100px;
+  float: left;
+  margin: 10px 10px 0px 0px;
+  background-size: cover;
+}
+.widget-streams .title {
+  clear: right;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 .widget-streams .viewers {
-  position: absolute;
-  right: 0px;
+  display: block;
+  line-height: 20px;
 }
 .page-galleries .galleries .item {
   float: left;
@@ -7224,7 +7354,7 @@ textarea.model-search-box input {
 .page-downloads .downloads .download a {
   display: block;
   padding-top: 100px;
-  background-position: center 30px;
+  background-position: center 20px;
   background-repeat: no-repeat;
 }
 .page-matches .overview > div {
@@ -7281,27 +7411,33 @@ textarea.model-search-box input {
 }
 .widget-matches-latest li a {
   display: block;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 .widget-matches-latest li img {
-  float: left;
   margin-right: 10px;
+  vertical-align: -9px;
 }
 .widget-matches-latest li .scores {
   position: absolute;
-  right: 0px;
+  right: 10px;
   top: 0px;
 }
-.widget-matches-latest li .scores .win {
-  color: #008000;
+.widget-matches-latest li .scores .left-win {
+  color: #00ff4e;
 }
-.widget-matches-latest li .scores .defeat {
-  color: #ff0000;
+.widget-matches-latest li .scores .left-defeat {
+  color: #ff4000;
 }
-.widget-matches-latest li .scores .draw {
-  color: #ffa500;
+.widget-matches-latest li .scores .left-draw {
+  color: #ffa800;
 }
 .page-servers .server {
   margin-bottom: 20px;
+}
+.page-forums h1 a,
+.page-threads h1 a {
+  color: white;
 }
 /* Forums index page */
 .page-forums-index .action {
@@ -7340,7 +7476,7 @@ textarea.model-search-box input {
 }
 .page-forums-index .sub-forum {
   padding: 10px;
-  border: 2px solid #eeeeee;
+  border: 2px solid #00afff;
   border-top: none;
   overflow: hidden;
 }
@@ -7430,7 +7566,7 @@ textarea.model-search-box input {
 .page-forums-show-forum .sub-forums .sub-forum,
 .page-forums-show-new-threads .sub-forums .sub-forum {
   padding: 10px;
-  border: 2px solid #eeeeee;
+  border: 2px solid #00afff;
   border-top: none;
   overflow: hidden;
 }
@@ -7551,7 +7687,7 @@ textarea.model-search-box input {
 .page-posts .post {
   position: relative;
   margin-bottom: 10px;
-  border: 2px solid #eeeeee;
+  border: 2px solid #00afff;
 }
 .page-threads .post:before,
 .page-posts .post:before,
@@ -7585,7 +7721,7 @@ textarea.model-search-box input {
   min-height: 135px;
   box-sizing: border-box;
   padding: 10px;
-  background-color: #EEE;
+  background-color: #202427;
   float: left;
 }
 .page-threads .post .meta .creator-name,
@@ -7598,7 +7734,7 @@ textarea.model-search-box input {
 .page-threads .post .meta .avatar,
 .page-posts .post .meta .avatar {
   display: block;
-  max-width: 100px; 
+  max-width: 100px;
   max-height: 100px;
 }
 .page-threads .post .meta .counter,
@@ -7633,7 +7769,7 @@ textarea.model-search-box input {
 }
 .page-threads .post .content .text hr,
 .page-posts .post .content .text hr {
-  border-color: #eeeeee;
+  border-color: #00afff;
 }
 .page-threads .post .content .text .signature,
 .page-posts .post .content .text .signature {
@@ -7688,7 +7824,7 @@ textarea.model-search-box input {
     border-color: #00afff;
   }
   100% {
-    border-color: #eeeeee;
+    border-color: #00afff;
   }
 }
 .page-threads.page-forums-threads-new .action {
@@ -7727,7 +7863,7 @@ textarea.model-search-box input {
 }
 .page-threads.page-forums-threads-new .sub-forum {
   padding: 10px;
-  border: 2px solid #eeeeee;
+  border: 2px solid #00afff;
   border-top: none;
   overflow: hidden;
 }
@@ -7881,22 +8017,258 @@ textarea.model-search-box input {
 }
 .page-auth-login .btn-restore {
   position: absolute;
-  bottom: 0px;
-  right: 0px;
+  bottom: 20px;
+  right: 40px;
 }
 /*
  * Mainlayout
  */
-#header {
-  height: 100px;
-  background-color: #00afff;
+body {
+  background-color: #090a0c;
+  font-family: 'Titillium Web';
   color: white;
-  cursor: pointer;
 }
-#header h2 {
+.widget-auth-logged-in a {
+  display: inline-block;
+  padding: 5px 10px;
+  border: 1px solid #373e43;
+  color: #4e585f;
+}
+#header .top-bar {
+  height: 80px;
+  padding: 25px 0px;
+}
+#header .top-bar .header-logo {
+  margin: 0px 20px;
+}
+#header .top-bar img {
+  max-height: 30px;
+}
+#header .top-bar .right {
+  float: right;
+  padding-top: 0px;
+}
+#header nav {
+  background-color: #202427;
+  border-top: 1px solid #373e43;
+  border-bottom: 4px solid #171a1c;
+}
+#header nav .container {
+  position: relative;
+}
+#header nav ul {
+  margin: 10px 0px;
+  border-left: 1px solid #373e43;
+}
+#header nav a {
+  display: inline-block;
+  position: relative;
+  height: 60px;
+  line-height: 60px;
+  padding: 0px 20px;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+#header nav li a:before {
+  content: ' ';
+  display: none;
+  position: absolute;
+  left: 20px;
+  right: 20px;
+  bottom: 0px;
+  height: 2px;
+  background-color: #00afff;
+}
+#header nav li a.active:before,
+#header nav li:hover a:before {
+  display: block;
+}
+#header nav li.icon {
+  margin-left: 20px;
+  color: #373e43;
+}
+#header nav .right {
+  position: absolute;
+  right: 0px;
+  top: 10px;
+}
+#header nav .right a {
+  color: #373e43;
+}
+#header nav .right a:hover {
+  transform: scale(1.5);
+  transition: all 0.08s linear;
+}
+@media (min-width: 991px) {
+  #header nav ul {
+    padding-left: 0;
+    list-style: none;
+    margin-left: -5px;
+  }
+  #header nav ul > li {
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+@media (max-width: 990px) {
+  #header .top-bar {
+    height: auto;
+    text-align: center;
+  }
+  #header .top-bar .right {
+    float: none;
+    padding-top: 20px;
+  }
+  #header nav ul {
+    padding-left: 0;
+    list-style: none;
+    border: none;
+  }
+  #header nav ul .icon {
+    cursor: pointer;
+  }
+  #header nav ul a {
+    display: none;
+    height: 40px;
+    line-height: 40px;
+  }
+  #header nav ul li a:before {
+    display: none !important;
+  }
+  #header nav ul li:not(.icon):hover {
+    background-color: #373e43;
+  }
+  #header nav .right {
+    display: none;
+  }
+  #header nav.max a {
+    display: block;
+  }
+}
+@media (max-width: 600px) {
+  #header .right {
+    padding-top: 0px;
+  }
+  #header .right a {
+    margin-top: 20px;
+  }
+}
+.divider {
+  height: 4px;
+  margin-bottom: 20px;
+  background-color: #00afff;
+}
+#sidebar {
+  padding-left: 20px;
+  border-left: 1px solid #111214;
+}
+#sidebar .border {
+  padding: 20px;
+  background-color: #111214;
+}
+#sidebar h3 {
   margin: 0px;
-  line-height: 100px;
+  padding: 10px 20px;
+  border-bottom: 4px solid #004666;
+  background-color: #00afff;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
-#mid-container {
-  padding: 20px 0px;
+#sidebar h3 a {
+  float: right;
+  color: #004666;
+}
+#sidebar h3 a:hover {
+  transform: scale(1.5);
+  transition: all 0.08s linear;
+}
+#sidebar .widget {
+  line-height: 40px;
+}
+#sidebar .widget li {
+  margin: 2px 0px;
+  padding: 0px 10px;
+  background-color: #0c0d0e;
+}
+#sidebar .widget li:hover {
+  background-color: #080809;
+}
+#footer .links {
+  margin-top: 40px;
+  padding: 40px 0px;
+  background-color: #111214;
+  color: #00afff;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+#footer .links a {
+  padding: 10px;
+}
+#footer .more {
+  padding: 40px 0px;
+  background-color: #202427;
+}
+#footer .more .info a {
+  color: #ffffff;
+}
+#footer .more .visitors-label {
+  margin-left: 10px;
+  color: #4e585f;
+  font-weight: bold;
+}
+#footer .more .visitors-label:before {
+  content: '-';
+  margin-right: 10px;
+}
+#footer .more .widget-visitors {
+  display: inline-block;
+}
+#footer .more .widget-visitors ul {
+  display: inline-block;
+  color: #4e585f;
+  font-weight: bold;
+}
+#footer .more .widget-visitors ul li {
+  padding: 0px;
+}
+#footer .more .widget-visitors ul span {
+  font-weight: normal;
+}
+#footer .more .right {
+  float: right;
+}
+#footer .more .right a {
+  display: inline-block;
+  padding: 0px 10px;
+  color: #373e43;
+}
+#footer .more .right a:hover {
+  transform: scale(1.5);
+  transition: all 0.08s linear;
+}
+@media (max-width: 990px) {
+  #footer {
+    text-align: center;
+  }
+  #footer .links {
+    padding: 40px 0px 0px 0px;
+  }
+  #footer .links li {
+    margin-bottom: 20px;
+  }
+  #footer .more .stats {
+    display: block;
+    margin-top: 20px;
+  }
+  #footer .more .stats:before {
+    display: none;
+  }
+  #footer .more .right {
+    float: none;
+    margin-top: 20px;
+  }
 }
