--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -217,13 +217,27 @@ a:hover { color: @primaryColor; text-decoration: none }
     }
 }
 
-.page-news {
+.page-news-show-overview, .page-news-show {
     .news {
         margin-bottom: 20px; padding-bottom: 20px; border-bottom: 1px solid @dark;
         h2 { text-transform: uppercase; font-weight: bold; margin-bottom: 0px; }
         header span { display: block; margin-bottom: 20px; color: @primaryColor; }
         .image img { max-width: 100% }
     }
+}
+.page-news-show-stream {
+    .item { float: left; margin-bottom: 10px; background-color: @dark; box-sizing: border-box; width: 50%; padding: 20px; transition: all 0.5s; }
+    .item:nth-child(even) { border-left: 5px solid black; }
+    .item:nth-child(odd) { border-right: 5px solid black; }
+    .item.new {  transform: scale(0.9); }
+    .image { display: block; height: 200px; background-size: cover; background-position: center; }
+    h2 { width: 100%; .text-overflow() }
+}
+@media (max-width: 600px) {
+    .page-news-show-stream {
+        .image { height: 100px; }
+        h2 { font-size: 16px; }
+    }   
 }
 
 .page-videos {
